syntax = "proto3";

package orders;

option go_package = "github.com/Babushkin05/software-dev-course/kr3/api-gateway/api/gen/orderspb";

import "google/api/annotations.proto";

service OrdersService {
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse) {
    option (google.api.http) = {
      post: "/v1/orders"
      body: "*"
    };
  }

  rpc GetOrders(GetOrdersRequest) returns (OrdersList) {
    option (google.api.http) = {
      get: "/v1/orders"
    };
  }

  rpc GetOrderStatus(GetOrderStatusRequest) returns (OrderStatusResponse) {
    option (google.api.http) = {
      get: "/v1/orders/{order_id}/status"
    };
  }
}

message CreateOrderRequest {
  string user_id = 1;
  int64 amount = 2;
  string description = 3;
}

message Order {
  string id = 1;
  string user_id = 2;
  int64 amount = 3;
  string description = 4;
  string status = 5;
  string created_at = 6;
}

message OrderResponse {
  Order order = 1;
}

message GetOrdersRequest {
  string user_id = 1;
}

message OrdersList {
  repeated Order orders = 1;
}

message GetOrderStatusRequest {
  string order_id = 1;
}

message OrderStatusResponse {
  string status = 1;
}
